<resources>

    <string name="app_name">My Symptoms</string>

    <string name="profile">Profile</string>
    <string name="shareSymptoms">Share Symptoms</string>
    <string name="viewSymptoms">View Symptoms</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="list_of_symptoms">List of Symptoms</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="entry_details">Entry Details</string>
    <string name="date_picker">Date Picker</string>
    <string name="time_picker">Time Picker</string>
    <string name="allow_permissions_for_smooth_functioning">Allow permissions for smooth functioning</string>
    <string name="please_select_a_level_of_severity_from_given_options">Please select a level of severity from given options</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="provide_a_concise_description_of_your_ailment">Provide a concise description of your ailment</string>

    <!--Toast Messages-->
    <string name="your_profile_data_has_been_updated">Your profile data has been updated</string>
    <string name="your_symptom_has_been_logged">Your symptom has been logged</string>
    <string name="your_symptom_cannot_be_logged_due_to_an_internal_database_error">Your symptom cannot be logged due to an internal database error</string>
    <string name="your_symptom_has_been_deleted">Your symptom has been deleted</string>
    <string name="your_symptom_could_not_be_deleted">Your symptom could not be deleted</string>
    <string name="no_email_client_installed">No email client installed</string>
    <string name="welcome_to_my_symptoms">Welcome to My Symptoms</string>
    <string name="you_must_select_a_valid_time_of_occurrence">You must select a valid time of occurrence</string>
    <string name="a_symptom_already_exists_with_the_same_time">A symptom already exists with the same time!</string>

    <!--Dialog Messages-->
    <string name="your_changes_will_be_discarded">Your changes will be discarded</string>
    <string name="your_profile_will_be_visible_in_all_your_logs">Your profile will be visible in all your logs</string>
    <string name="choose_an_email_client">Choose an email client</string>
    <string name="choose_a_level_of_severity">Choose a level of Severity</string>
    <string name="select_from_existing_images">Select from existing images</string>
    <string name="click_a_new_picture">Click a new picture</string>
    <string name="your_changes_can_be_modified_or_deleted_later">Your changes can be modified or deleted later</string>
    <string name="modify_entry">Modify Entry</string>
    <string name="are_you_sure">Are you sure?</string>

    <!--TextViews in Edit Profile-->
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="insurance_name">Insurance Name</string>
    <string name="member_id">Member ID</string>

    <!--TextViews in Edit Symptom Details-->
    <string name="time_of_occurrence">Time of Occurrence</string>
    <string name="body_part">Body Part</string>
    <string name="choose_a_body_part">Choose a body part</string>
    <string name="symptom_description">Symptom Description</string>
    <string name="level_of_severity">Level of Severity</string>
    <string name="attach_a_picture">Attach a picture</string>
    <string name="you_may_only_click_a_new_image_or_select_an_existing_image">You may only click a new image or select an existing image</string>

    <!--List of Body Parts-->
    <string-array name="array_body_parts">
        <item>Left Eye</item>
        <item>Right Eye</item>
        <item>Nose</item>
        <item>Left Ear</item>
        <item>Right Ear</item>
        <item>Mouth</item>
        <item>Head</item>
        <item>Neck</item>
        <item>Left Shoulder</item>
        <item>Right Shoulder</item>
        <item>Left Arm</item>
        <item>Right Arm</item>
        <item>Fingers</item>
        <item>Torso</item>
        <item>Lower back</item>
        <item>Genitals</item>
        <item>Left Thigh</item>
        <item>Right Thigh</item>
        <item>Left Knee</item>
        <item>Right Knee</item>
        <item>Left Leg</item>
        <item>Right Leg</item>
        <item>Left Foot</item>
        <item>Right Foot</item>
        <item>Toes</item>
        <item>Other</item>
    </string-array>

    <!--List of Levels of Severity-->
    <string-array name="array_levels_of_severity">
        <item>Mild</item>
        <item>Moderate</item>
        <item>Severe</item>
    </string-array>


</resources>
