<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DatabaseModule.EntryDetailsActivity"
    tools:showIn="@layout/activity_entry_details">

    <LinearLayout
        android:id="@+id/linearLayoutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_patientEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_of_occurrence" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@android:drawable/ic_menu_my_calendar"
                android:onClick="setTimeOfOccurrence" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_dateOfOccurrence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_timeOfOccurrence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_bodyPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_part" />

        <Spinner
            android:id="@+id/spinner_bodyPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/array_body_parts"
            android:prompt="@string/choose_a_body_part"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/textView_symptomDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom_description" />

        <EditText
            android:id="@+id/editText_symptomDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="5" />

        <TextView
            android:id="@+id/textView_severityLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_of_severity" />

        <Spinner
            android:id="@+id/spinner_severityLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/array_levels_of_severity"
            android:prompt="@string/choose_a_level_of_severity"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attach_a_picture" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@android:drawable/ic_menu_camera"
                android:onClick="capturePicture" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_symptom"
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/tv_imageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="dontSaveEntry"
                android:text="@string/back" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="modifyEntry"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>